force-app/main/default/objects/Category__c/Category__c.object-meta.xml
<CustomObject>
    <description>This object holds the Pillars, CCS Categories, CCS Subcategories, CAS Master Categories, CAS Categories, CAS Sub Categories and CAS Codes. They are hierarchical, and this is achieved via the [CategoryType] field, and the [Parent] self-lookup.</description>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>