force-app/main/default/objects/Category__c/fields/Cat_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Cat_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Cat External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>