force-app/main/default/objects/Category__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <label>Category Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>