force-app/main/default/objects/Category__c/fields/CategoryType__c.field-meta.xml
<CustomField>
    <fullName>CategoryType__c</fullName>
    <description>This field specifies whether the record is a Pillar, Category or Subcategory</description>
    <inlineHelpText>This field specifies whether the record is a Pillar, Category or Subcategory</inlineHelpText>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pillar</fullName>
            </value>
            <value>
                <fullName>CCS Category</fullName>
            </value>
            <value>
                <fullName>CCS Sub Category</fullName>
            </value>
            <value>
                <fullName>CAS Master Category</fullName>
            </value>
            <value>
                <fullName>CAS Category</fullName>
            </value>
            <value>
                <fullName>CAS Sub Category</fullName>
            </value>
            <value>
                <fullName>Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>