force-app/main/default/objects/Category__c/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <label>Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPV</fullName>
            </value>
            <value>
                <fullName>UNSPSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>