force-app/main/default/objects/Category__c/fields/Don_t_Show_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Show_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you do not want the Category to appear on the Website?</inlineHelpText>
    <label>Don&apos;t Show on Website</label>
    <type>Checkbox</type>
</CustomField>