force-app/main/default/objects/Category__c/fields/GGParent__c.field-meta.xml
<CustomField>
    <fullName>GGParent__c</fullName>
    <formula>Parent__r.Parent__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GGParent</label>
    <type>Text</type>
</CustomField>