force-app/main/default/objects/Category__c/fields/GParent__c.field-meta.xml
<CustomField>
    <fullName>GParent__c</fullName>
    <formula>Parent__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GParent</label>
    <type>Text</type>
</CustomField>