force-app/main/default/objects/Category__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the parent of this record. If this record is a Subcategory, the Parent must be a Category. If this record is a Category, the Parent must be a Pillar.</description>
    <inlineHelpText>This is the parent of this record. If this record is a Subcategory, the Parent must be a Category. If this record is a Category, the Parent must be a Pillar.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Child Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>