force-app/main/default/objects/Category__c/fields/Product_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Description__c</fullName>
    <description>Product Group Description for Codes</description>
    <inlineHelpText>Product Group Description for Codes</inlineHelpText>
    <label>Product Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>