force-app/main/default/objects/Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CategoryType__c</columns>
    <columns>Category_Code__c</columns>
    <columns>Parent__c</columns>
    <columns>GParent__c</columns>
    <columns>GGParent__c</columns>
    <columns>Product_Group_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>