force-app/main/default/objects/Category__c/listViews/CAS_Codes.listView-meta.xml
<ListView>
    <fullName>CAS_Codes</fullName>
    <columns>NAME</columns>
    <columns>Code_Type__c</columns>
    <columns>Product_Group_Description__c</columns>
    <columns>Notes__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CategoryType__c</field>
        <operation>equals</operation>
        <value>Code</value>
    </filters>
    <label>CAS Codes</label>
</ListView>