force-app/main/default/objects/Category__c/listViews/CAS_Master_Categories.listView-meta.xml
<ListView>
    <fullName>CAS_Master_Categories</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CategoryType__c</field>
        <operation>equals</operation>
        <value>CAS Master Category</value>
    </filters>
    <label>CAS Master Categories</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>