force-app/main/default/objects/Category__c/listViews/CAS_Sub_Categories.listView-meta.xml
<ListView>
    <fullName>CAS_Sub_Categories</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CategoryType__c</field>
        <operation>equals</operation>
        <value>CAS Sub Category</value>
    </filters>
    <label>CAS Sub Categories</label>
</ListView>