force-app/main/default/objects/Category__c/listViews/CCS_Categories.listView-meta.xml
<ListView>
    <fullName>CCS_Categories</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CategoryType__c</field>
        <operation>equals</operation>
        <value>CCS Category</value>
    </filters>
    <label>CCS Categories</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>