force-app/main/default/objects/Category__c/listViews/CCS_Sub_Categories.listView-meta.xml
<ListView>
    <fullName>CCS_Sub_Categories</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CategoryType__c</field>
        <operation>equals</operation>
        <value>CCS Sub Category</value>
    </filters>
    <label>CCS Sub Categories</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>