force-app/main/default/objects/Category__c/listViews/Pillar.listView-meta.xml
<ListView>
    <fullName>Pillar</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CategoryType__c</field>
        <operation>equals</operation>
        <value>Pillar</value>
    </filters>
    <label>Pillar</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>